fix(kit): sequences of white space are preserved for `inputTag`

--- a/projects/kit/components/tag/tag.style.less
+++ b/projects/kit/components/tag/tag.style.less
@@ -171,6 +171,7 @@
 }
 
 .t-text {
+    .text-overflow(pre); // @note: fix problem in Safari
     padding-right: 0.02em;
 }
 
@@ -178,6 +179,7 @@
     .text-overflow();
     position: relative;
     display: flex;
+    width: auto; // @note: fix problem in Safari
     align-items: center;
     border-radius: inherit;
 
